# Machine-Learning-In-Production

./: .gitignore  README.md
01_Python_Basic/: README.md  basic.ipynb  day_01_basic.ipynb  day_02_class_and_object.ipynb  model.py
02_Prod_Dev_Envs_Setup/test_env/: Pipfile  README.md  test.ipynb
02_Prod_Dev_Envs_Setup/test_env_one/: Pipfile  README.md  image_extraction.ipynb  image_processing_basic_func.ipynb  ocr_basic.ipynb  test.ipynb
02_Prod_Dev_Envs_Setup/test_poetry/: README.md  pyproject.toml  test.ipynb
